<resources>
    <string name="app_name">Workout Sync</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="stop">Stop</string>
    <string name="start_session">Start Session</string>
    <string name="edit">Edit</string>
    <string name="start_workout">Start Workout</string>
    <string name="circuit_name">Circuit</string>
    <string name="devices_connected">Devices connected:</string>
    <string name="laps">Laps</string>
    <string name="duration">Duration</string>
    <string name="name">Name</string>
    <string name="rest_time">Rest Time</string>
    <string name="duration_is">Duration: %s</string>
    <string name="rest_is">Rest: %s</string>
    <string name="laps_is">Laps: %d</string>
    <string name="pure_duration">%d</string>
    <string name="pure_laps">%d</string>
    <string name="pure_name">%s</string>
    <string name="circuit_name_label">Circuit Name:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="selected_title">Selected: %d</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
</resources>
