<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item android:id="@+id/add_new_circuit"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_selected_circuit"
        android:enabled="false"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_selected_circuits"
        android:enabled="false"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
