<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:application=".WaitingActivity">

    <Button
        android:id="@+id/startWorkoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="startClicked"
        android:text="@string/start_workout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devicesConnectedRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/devicesConnectedRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/startWorkoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circuitName"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/circuitName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/circuit_name"
        app:layout_constraintBottom_toTopOf="@id/connectedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/devices_connected"
        app:layout_constraintBottom_toTopOf="@+id/devicesConnectedRecyclerView"
        app:layout_constraintEnd_toEndOf="@id/devicesConnectedRecyclerView"
        app:layout_constraintStart_toStartOf="@id/devicesConnectedRecyclerView"
        app:layout_constraintTop_toBottomOf="@+id/circuitName" />
</androidx.constraintlayout.widget.ConstraintLayout>